Fix spacing issues on About Us

--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -102,6 +102,15 @@ Does not work on round things. */
 * About Us
 */
 
+.about-us .sub-heading {
+  margin-top: $spacing-unit * 2;
+  margin-bottom: $spacing-unit;
+}
+
+#about-us-heading {
+  margin-top: $spacing-unit;
+}
+
 #fall-image {
   background-image: url(../assets/images/about-us/fall.jpg);
   background-color: rgba($pie-blue, .70);
@@ -159,6 +168,13 @@ Does not work on round things. */
   text-decoration: none;
 }
 
+.about-us table {
+  margin-bottom: $spacing-unit * 2;
+}
+
+.about-us center {
+  margin-bottom: $spacing-unit * 2;
+}
 
 /**
 * Gallery
